<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="download">Download</string>

    <string name="notification_channel_id" translatable="false">loadApp_channel</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="file_name">File Name</string>
    <string name="status">Status</string>
    
    <string name="Glide">Glide-Image Loading Library by Bump Tech</string>
    <string name="LoadApp">Current repository by Udacity</string>
    <string name="Retrofit">Type-safe HTTP client for Android and Java Square Inc</string>
    <string name="ok">ok</string>
    <string name="notification_channel_name">channel_name</string>
    <string name="details">Details</string>
</resources>
