<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:id="@+id/linearFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/linearStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFileName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight=".75"
            android:inputType="textPersonName"
            android:text="@string/file_name" />

        <TextView
            android:id="@+id/textViewFileName2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="2.25"
            android:inputType="textPersonName"
            android:text="@string/file_name" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearFileName">

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight=".75"
            android:text="@string/status"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textViewStatus2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="2.25"
            android:inputType="textPersonName"
            android:text="@string/status" />
    </LinearLayout>


    <Button
        android:id="@+id/buttonOk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/ok"
        android:onClick="onButtonOkClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearStatus">

    </Button>

</androidx.constraintlayout.motion.widget.MotionLayout>